# opendefocus

./: .gitignore  .pre-commit-config.yaml  .rustc_info.json  CHANGELOG.md  Cargo.toml  README.md  about.toml  licenses.hbs  pyproject.toml  release-plz.toml  rust-toolchain.toml
.devcontainer/linux/: devcontainer.json
.devcontainer/macos/: devcontainer.json
.devcontainer/windows/: devcontainer.json
.github/workflows/: CI.yml  release_nuke.yaml
.woodpecker/: release_docs.yaml  release_plz.yaml  test.yaml
crates/opendefocus/: CHANGELOG.md  Cargo.toml  deny.toml
crates/opendefocus-datastructure/: CHANGELOG.md  Cargo.toml  build.rs
crates/opendefocus-kernel/: Cargo.toml
crates/opendefocus-kernel/src/: lib.rs
crates/opendefocus-kernel/src/stages/: kernel.rs  non_uniform.rs  ring.rs  sample.rs
crates/opendefocus-kernel/src/util/: image.rs
crates/opendefocus-macros/: Cargo.toml
crates/opendefocus-macros/src/: lib.rs
crates/opendefocus-nuke/: Cargo.toml  build.rs
crates/opendefocus-nuke/include/: bridge.hpp  opendefocus.hpp
crates/opendefocus-nuke/src/: bridge.cpp  channels.rs  consts.rs  knobs.rs  lib.rs  opendefocus.cpp  render.rs
crates/opendefocus-shared/: CHANGELOG.md  Cargo.toml
crates/opendefocus-shared/src/: lib.rs  math.rs
crates/opendefocus/src/: error.rs  lib.rs
crates/opendefocus/src/renders/: focal_plane_setup.rs
crates/opendefocus/src/runners/: cpu.rs  runner.rs  shared_runner.rs  wgpu.rs
crates/opendefocus/src/shaders/: opendefocus-kernel.wgsl
crates/opendefocus/src/worker/: engine.rs
crates/spirv-cli-build/: Cargo.toml
crates/spirv-cli-build/src/: main.rs
docs/: book.toml  licenses.md
docs/src/: SUMMARY.md  detailed.md  donate.md  download.md  index.md  integration.md  license.md  user_guide.md
docs/src/assets/: axial_aberration_offset.webm  barndoors_animated.webm  camera_input.webm  focal_plane_camera.webm  light_rays_explained.webm
docs/src/detailed/: bokeh.md  camera_input.md  defocus_size.md  depth_math.md  focal_plane_setup.md  index.md
docs/src/detailed/non_uniform/: astigmatism.md  axial_aberration.md  barndoors.md  catseye.md  index.md  inverse_foreground.md
docs/src/quickstart/: bokeh.md  index.md  inputs.md  non_uniform.md  options.md  quality.md
package/: init.py
package/opendefocus/: datamodel.py  init.py  menu.py
package/opendefocus/worker/: menu_creator.py  node_setup.py  plugin_loader.py
package/opendefocus_plugin/: __init__.py  _consts.py  _menu_creator.py  _node_setup.py  _plugin_loader.py  init.py  menu.py
python/src/opendefocus/: __init__.py
scripts/devcontainer/: init.sh
scripts/devcontainer/linux/: manylinux.sh
scripts/devcontainer/macos/: init.sh  start_container.sh
scripts/devcontainer/windows/: init.sh
test/images/preprocessor/: depth.exr
test/test_package/: conftest.py
test/test_package/opendefocus/worker/: test_menu_creator.py  test_plugin_loader.py
test/test_package/opendefocus_plugin/: test_menu_creator.py  test_plugin_loader.py
xtask/: Cargo.toml  README.md  build.rs
xtask/src/: compile.rs  consts.rs  license.rs  main.rs  precommit.rs  release.rs  test.rs  util.rs
xtask/src/nuke/: compile.rs  mod.rs  package.rs  sources.rs
