[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
duct = "1.1"
log = "0.4"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
url = "2.5.7"
indicatif = "0.18.3"
futures-util = "0.3.31"
async-compression = { version = "0.4.34", default-features = false, features = [
    "all-implementations",
    "gzip",
] }
astral-tokio-tar = "0.5.6"
zip = { version = "6.0.0", default-features = false, features = ["deflate", "bzip2"] }
html-to-markdown-rs = "2.15.0"
naga = { version = "28.0", features = ["spv-in", "wgsl-out"] }
toml = "0.9"
git2 = "0.20"
async-walkdir = "2.1.0"
find-msvc-tools = "0.1.5"

[lints]
workspace = true

[build-dependencies]
anyhow = "1.0.100"
