[package]
name = "opendefocus-datastructure"
description = "OpenDefocus protobuf datastructure"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
publish = true

[features]
compile-protobuf-src = ["dep:protobuf-src"]
std = ["glam/default"]
libm = ["glam/libm"]
documented = ["dep:documented"]

[dependencies]
bytemuck = { version = "1.24", features = ["derive"] }
glam = { version = "0.30", default-features = false, features = ["bytemuck"] }
prost = { version = ">=0.14, < 0.15" }
prost-types = { version = ">=0.14, < 0.15" }
documented = { version = "0.9", optional = true }

circle-of-confusion = { version = ">=0.2.5" }
bokeh-creator = { version = ">=0.1.15, < 0.2", default-features = false }

opendefocus-shared = { path = "../opendefocus-shared", version = "=0.1.1" }

[lints]
workspace = true


[build-dependencies]
cargo_metadata = "0.23.1"
prost-build = "0.14.1"
protobuf-src = { version = "2.1.1", optional = true }
duct = "1.1.1"
