[package]
name = "opendefocus-nuke"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
links = "DDImage"
publish = false

[lib]
name = "opendefocus_nuke"
crate-type = ["staticlib"]


[dependencies]
cxx = { version = "1.0" }
opendefocus = { path = "../opendefocus", features = ["documented", "wgpu"] }
bitflags = "2.10.0"
log = "0.4.29"
documented = "0.9.2"
strum = "0.27.2"
strum_macros = "0.27.2"
anyhow = "1.0.100"
ndarray = "0.16"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
convert_case = "0.10.0"
chrono = "0.4.42"

[build-dependencies]
miette = { version = "5", features = ["fancy"] }
cxx-build = "1.0"

[lints]
workspace = true
