[package]
name = "opendefocus-nuke"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
links = "DDImage"
publish = true

[lib]
name = "opendefocus_nuke"
crate-type = ["cdylib"]

[dependencies]
cxx = { version = "1.0" }
opendefocus = { path = "../opendefocus", features = ["documented", "wgpu"], version = "=0.1.3" }
bitflags = "2.10"
log = "0.4"
documented = "0.9"
strum = "0.27"
strum_macros = "0.27"
anyhow = "1.0"
ndarray = "0.16"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
convert_case = "0.10"
chrono = "0.4"

[build-dependencies]
miette = { version = "5", features = ["fancy"] }
cxx-build = "1.0"

[lints]
workspace = true
